--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".FeaturesActivity">
+        </activity>
+        <activity
             android:name=".RouterDataActivity">
         </activity>
     </application>
