--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".WLANInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeNetworkActivity"
             android:exported="false" />
         <activity
@@ -38,12 +41,12 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".HomeActivity"
@@ -52,7 +55,7 @@
         </activity>
         <activity android:name=".FeaturesActivity" />
         <activity android:name=".RouterDataActivity" />
-        <activity android:name=".ConnectedDevicesActivity"/>
+        <activity android:name=".ConnectedDevicesActivity" />
     </application>
 
 </manifest>
