--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".WlanAccessActivity"
+            android:exported="false" />
+        <activity
             android:name=".WLANInfoActivity"
             android:exported="false" />
         <activity
@@ -50,9 +53,7 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity android:name=".FeaturesActivity" />
         <activity android:name=".RouterDataActivity" />
         <activity android:name=".ConnectedDevicesActivity" />
