--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".DSLInformationActivity"
+            android:exported="false" />
+        <activity
             android:name=".WlanAccessActivity"
             android:exported="false" />
         <activity
@@ -53,7 +56,7 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity android:name=".FeaturesActivity" />
         <activity android:name=".RouterDataActivity" />
         <activity android:name=".ConnectedDevicesActivity" />
