--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    implementation 'com.google.dagger:hilt-android:2.38.1'
     //dimen
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
-
-
     implementation 'com.google.code.gson:gson:2.8.9'
 }
